--- a/summer_clip/conf/eval_prompt.yaml
+++ b/summer_clip/conf/eval_prompt.yaml
@@ -14,25 +14,26 @@ tokenizer:
   path: transformers.CLIPTokenizer
   name: openai/clip-vit-base-patch32  # should not differ from large
 
-prompts_ids:
-  - - 21936
-    - 35407
-    - 26285
-    - 25887
-    - 26662
-    - 38266
-    - 24092
-    - 36489
-    - 41811
-    - 49169
-    - 10539
-    - 46190
-    - 28283
-    - 41873
-    - 8511
-    - 17877
+prompts_ids: null
+  # - - 21936
+  #   - 35407
+  #   - 26285
+  #   - 25887
+  #   - 26662
+  #   - 38266
+  #   - 24092
+  #   - 36489
+  #   - 41811
+  #   - 49169
+  #   - 10539
+  #   - 46190
+  #   - 28283
+  #   - 41873
+  #   - 8511
+  #   - 17877
 
-prompts_texts: null
+prompts_texts: 
+  - a centered satellite photo of
 
 data_loader:
   val:
