--- a/summer_clip/conf/train_coop.yaml
+++ b/summer_clip/conf/train_coop.yaml
@@ -21,9 +21,17 @@ clip_gpt:
 #   prompt_len: 16
 #   dist_p: 2
 
+# prompt_model:
+#   _target_: summer_clip.clip_prompt.prompt_models.Gumbelv0a1
+#   prompt_len: 5
+#   temp_scheduler:
+#     _target_: summer_clip.clip_prompt.temp_schedulers.ConstantScheduler
+#     val: 1.
+
 prompt_model:
-  _target_: summer_clip.clip_prompt.prompt_models.Gumbelv0a1
+  _target_: summer_clip.clip_prompt.prompt_models.Gumbelv3a1
   prompt_len: 5
+  hidden_dim: 256
   temp_scheduler:
     _target_: summer_clip.clip_prompt.temp_schedulers.ConstantScheduler
     val: 1.
@@ -76,10 +84,14 @@ text_batcher:
   path: summer_clip.clip_prompt.prompt_learner.ImageTextBatcher
   kwargs: {}
 
+# vocab_filter:
+#   path: summer_clip.clip_prompt.vocab_filters.AllowedTokensFilter
+#   kwargs:
+#     allowed_tokens: ['a', 'centered', 'satellite', 'photo', 'of']
+
 vocab_filter:
-  path: summer_clip.clip_prompt.vocab_filters.AllowedTokensFilter
-  kwargs:
-    allowed_tokens: ['a', 'centered', 'satellite', 'photo', 'of']
+  path: summer_clip.clip_prompt.vocab_filters.NoFilter
+  kwargs: {}
 
 loss:
   clip: 1.0
