--- a/summer_clip/conf/train_coop.yaml
+++ b/summer_clip/conf/train_coop.yaml
@@ -21,20 +21,20 @@ clip_gpt:
 #   prompt_len: 16
 #   dist_p: 2
 
-# prompt_model:
-#   _target_: summer_clip.clip_prompt.prompt_models.Gumbelv0a1
-#   prompt_len: 5
-#   temp_scheduler:
-#     _target_: summer_clip.clip_prompt.temp_schedulers.ConstantScheduler
-#     val: 1.
-
 prompt_model:
-  _target_: summer_clip.clip_prompt.prompt_models.Gumbelv3a1
+  _target_: summer_clip.clip_prompt.prompt_models.Gumbelv1a1
   prompt_len: 5
-  hidden_dim: 256
   temp_scheduler:
     _target_: summer_clip.clip_prompt.temp_schedulers.ConstantScheduler
     val: 1.
+
+# prompt_model:
+#   _target_: summer_clip.clip_prompt.prompt_models.Gumbelv3a1
+#   prompt_len: 5
+#   hidden_dim: 256
+#   temp_scheduler:
+#     _target_: summer_clip.clip_prompt.temp_schedulers.ConstantScheduler
+#     val: 1.
 
 tokenizer:
   path: transformers.CLIPTokenizer
@@ -87,11 +87,18 @@ text_batcher:
 # vocab_filter:
 #   path: summer_clip.clip_prompt.vocab_filters.AllowedTokensFilter
 #   kwargs:
-#     allowed_tokens: ['a', 'centered', 'satellite', 'photo', 'of']
+#     allowed_tokens: ['a</w>', 'centered</w>', 'satellite</w>', 'photo</w>', 'of</w>']
+
+# vocab_filter:
+#   path: summer_clip.clip_prompt.vocab_filters.NoFilter
+#   kwargs: {}
 
 vocab_filter:
-  path: summer_clip.clip_prompt.vocab_filters.NoFilter
-  kwargs: {}
+  path: summer_clip.clip_prompt.vocab_filters.FilterNonBasicStrong
+  kwargs:
+    keep_english: true
+    keep_numbers: true
+    keep_punctuation: true
 
 loss:
   clip: 1.0
