--- a/summer_clip/conf/train_coop.yaml
+++ b/summer_clip/conf/train_coop.yaml
@@ -21,20 +21,23 @@ clip_gpt:
 #   prompt_len: 16
 #   dist_p: 2
 
-prompt_model:
-  _target_: summer_clip.clip_prompt.prompt_models.Gumbelv1a1
-  prompt_len: 5
-  temp_scheduler:
-    _target_: summer_clip.clip_prompt.temp_schedulers.ConstantScheduler
-    val: 1.
-
 # prompt_model:
-#   _target_: summer_clip.clip_prompt.prompt_models.Gumbelv3a1
+#   _target_: summer_clip.clip_prompt.prompt_models.Gumbelv1a1
 #   prompt_len: 5
-#   hidden_dim: 256
 #   temp_scheduler:
 #     _target_: summer_clip.clip_prompt.temp_schedulers.ConstantScheduler
 #     val: 1.
+
+prompt_model:
+  _target_: summer_clip.clip_prompt.prompt_models.Gumbelv3a1
+  prompt_len: 5
+  gpt_cfg:
+    path: summer_clip.clip_prompt.gpt_logits.AdapterGPT
+    kwargs:
+      hidden_dim: 128
+  temp_scheduler:
+    _target_: summer_clip.clip_prompt.temp_schedulers.ConstantScheduler
+    val: 1.
 
 tokenizer:
   path: transformers.CLIPTokenizer
@@ -55,7 +58,7 @@ optim:
 #   weight_decay: 0.0005
 #   optim_class: torch.optim.Adam
 #   kwargs:
-#     lr: 0.002
+#     lr: 3e-4
 
 scheduler:
   name: cosine
