--- a/summer_clip/conf/train_coop.yaml
+++ b/summer_clip/conf/train_coop.yaml
@@ -21,29 +21,29 @@ clip_gpt:
 #   prompt_len: 16
 #   dist_p: 2
 
-# prompt_model:
-#   _target_: summer_clip.clip_prompt.prompt_models.Gumbelv1a1
-#   prompt_len: 5
-#   temp_scheduler:
-#     _target_: summer_clip.clip_prompt.temp_schedulers.ConstantScheduler
-#     val: 1.
-
 prompt_model:
-  _target_: summer_clip.clip_prompt.prompt_models.Gumbelv3a1
+  _target_: summer_clip.clip_prompt.prompt_models.Gumbelv1a1
   prompt_len: 5
-  # gpt_cfg:
-  #   path: summer_clip.clip_prompt.gpt_logits.AdapterGPT
-  #   kwargs:
-  #     hidden_dim: 128
-  gpt_cfg:
-    path: summer_clip.clip_prompt.gpt_logits.LoRAGPT
-    kwargs:
-      r: 8
-      lora_alpha: 32
-      lora_dropout: 0.0
   temp_scheduler:
     _target_: summer_clip.clip_prompt.temp_schedulers.ConstantScheduler
     val: 1.
+
+# prompt_model:
+#   _target_: summer_clip.clip_prompt.prompt_models.Gumbelv3a1
+#   prompt_len: 5
+#   # gpt_cfg:
+#   #   path: summer_clip.clip_prompt.gpt_logits.AdapterGPT
+#   #   kwargs:
+#   #     hidden_dim: 128
+#   gpt_cfg:
+#     path: summer_clip.clip_prompt.gpt_logits.LoRAGPT
+#     kwargs:
+#       r: 8
+#       lora_alpha: 32
+#       lora_dropout: 0.0
+#   temp_scheduler:
+#     _target_: summer_clip.clip_prompt.temp_schedulers.ConstantScheduler
+#     val: 1.
 
 tokenizer:
   path: transformers.CLIPTokenizer
@@ -51,20 +51,20 @@ tokenizer:
   set_pad_as_eos: false
   tokenize_classes_kwargs: {}
 
-# optim:
-#   weight_decay: 0.0005
-#   optim_class: torch.optim.SGD
-#   kwargs:
-#     lr: 0.002
-#     momentum: 0.9
-#     dampening: 0
-#     nesterov: false
-
 optim:
   weight_decay: 0.0005
-  optim_class: torch.optim.Adam
+  optim_class: torch.optim.SGD
   kwargs:
-    lr: 3e-4
+    lr: 0.002
+    momentum: 0.9
+    dampening: 0
+    nesterov: false
+
+# optim:
+#   weight_decay: 0.0005
+#   optim_class: torch.optim.Adam
+#   kwargs:
+#     lr: 3e-4
 
 scheduler:
   name: cosine
@@ -120,6 +120,7 @@ vocab_filter:
 loss:
   clip: 1.0
   fluency: 0.
+  entropy: 0.
 
 lm_loss:
   _target_: summer_clip.clip_prompt.prompt_learner.SuffixLMLoss
