--- a/summer_clip/conf/img_attn_dataset/stanford_cars.yaml
+++ b/summer_clip/conf/img_attn_dataset/stanford_cars.yaml
@@ -1,8 +1,7 @@
 defaults:
-  - /dataset: tip_stanford_cars_test_no_image
-  - /dataset@cache.dataset: tip_stanford_cars_train_no_image
   - /prompting: tip_stanford_cars
-  - _self_
+
+dataset_name: stanford_cars
 
 data:
   image_features_path: ${saved_paths.image_features.StanfordCars_tip_test-RN50}
