--- a/summer_clip/conf/cache_strategy/global_random.yaml
+++ b/summer_clip/conf/cache_strategy/global_random.yaml
@@ -1,2 +1,2 @@
 _target_: summer_clip.clip_searcher.cache_strategy.GlobalRandomSampleStrategy
-topk: [1, 2, 4, 8, 16, 32, 64]
+topk: [1, 2, 4, 8, 16, 32]
