--- a/summer_clip/conf/cache_strategy/topk_per_gold.yaml
+++ b/summer_clip/conf/cache_strategy/topk_per_gold.yaml
@@ -1,4 +1,4 @@
 _target_: summer_clip.clip_searcher.cache_strategy.TopKPerGoldStrategy
-topk: [1, 2, 4, 8, 16, 32, 64]
+topk: [1, 2, 4, 8, 16, 32]
 cache_dataset:
   - ${cache.dataset}
