--- a/summer_clip/conf/cache_strategy/topk_prob_per_gold.yaml
+++ b/summer_clip/conf/cache_strategy/topk_prob_per_gold.yaml
@@ -1,5 +1,5 @@
 _target_: summer_clip.clip_searcher.cache_strategy.TopKPerGoldProbStrategy
-topk: [1, 2, 4, 8, 16, 32, 64]
+topk: [1, 2, 4, 8, 16, 32]
 scale: [100.00000762939453]
 cache_dataset:
   - ${cache.dataset}
