--- a/summer_clip/conf/img_attn_dataset/eurosat.yaml
+++ b/summer_clip/conf/img_attn_dataset/eurosat.yaml
@@ -1,8 +1,7 @@
 defaults:
-  - /dataset: tip_eurosat_test_no_image
-  - /dataset@cache.dataset: tip_eurosat_train_no_image
   - /prompting: tip_eurosat
-  - _self_
+
+dataset_name: eurosat
 
 data:
   image_features_path: ${saved_paths.image_features.EuroSAT_tip_test-RN50}
