--- a/summer_clip/conf/img_attn_dataset/imagenet.yaml
+++ b/summer_clip/conf/img_attn_dataset/imagenet.yaml
@@ -1,8 +1,7 @@
 defaults:
-  - /dataset: imagenet_val_no_image
-  - /dataset@cache.dataset: imagenet_train_no_image
   - /prompting: tip_imagenet
-  - _self_
+
+dataset_name: imagenet
 
 data:
   image_features_path: ${saved_paths.image_features.ImageNet_val-RN50}
