--- a/summer_clip/conf/saved_paths/clip_paths.yaml
+++ b/summer_clip/conf/saved_paths/clip_paths.yaml
@@ -36,6 +36,9 @@ image_features:
   OxfordFlowers_tip_train-RN50: /home/myurachinskiy/CLIP/summer-clip/outputs/2023-05-16/07-00-47/train_image_features.pt
   OxfordFlowers_tip_test-RN50: /home/myurachinskiy/CLIP/summer-clip/outputs/2023-05-16/07-00-47/test_image_features.pt
 
+  Food101_tip_train-RN50: /home/myurachinskiy/CLIP/summer-clip/outputs/2023-05-16/07-27-53/train_image_features.pt
+  Food101_tip_test-RN50: /home/myurachinskiy/CLIP/summer-clip/outputs/2023-05-16/07-27-53/test_image_features.pt
+
 adapters:
   linear:
     CIFAR100_train-ViT_B/16: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-25/10-05-09
@@ -56,3 +59,4 @@ logits:
   Caltech101_tip_train-RN50-tip: /home/myurachinskiy/CLIP/summer-clip/outputs/2023-05-16/03-20-49/image_outs.pt
   OxfordPets_tip_train-RN50-tip: /home/myurachinskiy/CLIP/summer-clip/outputs/2023-05-16/05-27-54/train_image_outs.pt
   OxfordFlowers_tip_train-RN50-tip: /home/myurachinskiy/CLIP/summer-clip/outputs/2023-05-16/07-00-47/train_image_outs.pt
+  Food101_tip_train-RN50-tip: /home/myurachinskiy/CLIP/summer-clip/outputs/2023-05-16/07-27-53/train_image_outs.pt
