--- a/summer_clip/conf/image_attention.yaml
+++ b/summer_clip/conf/image_attention.yaml
@@ -2,7 +2,7 @@ defaults:
   - hydra_setup
   - adapter_setup
   - saved_paths: clip_paths
-  - img_attn_dataset@dataset_cfg: food101
+  - img_attn_dataset@dataset_cfg: dtd
   - dataset: tip_dataset_test_no_image
   - dataset@cache.dataset: tip_dataset_train_no_image
   - _self_
