--- a/summer_clip/conf/save_features.yaml
+++ b/summer_clip/conf/save_features.yaml
@@ -4,9 +4,9 @@ defaults:
   - _self_
   - dataset@train_dataset: tip_dataset_train
   - dataset@test_dataset: tip_dataset_test
-  - prompting: tip_food101
+  - prompting: tip_dtd
 
-dataset_name: food101
+dataset_name: dtd
 save_train_outs: true
 
 clip:
