--- a/summer_clip/conf/cache_value_strategy/softmax_cache.yaml
+++ b/summer_clip/conf/cache_value_strategy/softmax_cache.yaml
@@ -1,2 +1,3 @@
 _target_: summer_clip.clip_searcher.cache_value_strategy.SoftmaxCacheStrategy
-scale: [100., 200., 400., 800., 1600.]
+clip_scale: [100.00000762939453]
+scale: [0.1, 1.0, 10.0, 20.0]
